--- a/Core/NetworkExtensions.csproj
+++ b/Core/NetworkExtensions.csproj
@@ -54,9 +54,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Compatibility\RoadColorChanger.cs" />
+    <Compile Include="Framework\Extensions\LocaleManagerExtensions.cs" />
     <Compile Include="Framework\Extensions\NetInfoLaneExtensions.cs" />
     <Compile Include="Framework\ICompatibilityPart.cs" />
-    <Compile Include="MenusInstaller.cs" />
+    <Compile Include="Install\IInstaller.cs" />
+    <Compile Include="Menus.cs" />
+    <Compile Include="Install\MenusInstaller.cs" />
     <Compile Include="Mod.Path.cs" />
     <Compile Include="Mod.Parts.cs" />
     <Compile Include="Framework\Extensions\ItemClassExtensions.cs" />
@@ -87,7 +90,6 @@
     <Compile Include="Framework\Selector.cs" />
     <Compile Include="Framework\AssetManager.cs" />
     <Compile Include="Framework\TexturesSet.cs" />
-    <Compile Include="ModInitializer.CustomPanel.cs" />
     <Compile Include="Framework\Loading.cs" />
     <Compile Include="Framework\ToolsCSL.cs" />
     <Compile Include="Framework\ToolsUnity.cs" />
@@ -430,7 +432,6 @@
     <Content Include="SomeNetwork\thumbnail_atlas.png" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Menus\" />
     <Folder Include="NewNetwork\LargeAvenue6LM\Textures\" />
   </ItemGroup>
   <ItemGroup>
