Installer base class refact

--- a/Core/NetworkExtensions.csproj
+++ b/Core/NetworkExtensions.csproj
@@ -57,7 +57,7 @@
     <Compile Include="Framework\Extensions\LocaleManagerExtensions.cs" />
     <Compile Include="Framework\Extensions\NetInfoLaneExtensions.cs" />
     <Compile Include="Framework\ICompatibilityPart.cs" />
-    <Compile Include="Install\IInstaller.cs" />
+    <Compile Include="Install\Installer.cs" />
     <Compile Include="Menus\AdditionnalMenus.cs" />
     <Compile Include="Install\MenusInstaller.cs" />
     <Compile Include="Mod.Path.cs" />
