--- a/Core/NetworkExtensions.csproj
+++ b/Core/NetworkExtensions.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Framework\Extensions\LocaleManagerExtensions.cs" />
     <Compile Include="Framework\Extensions\NetInfoLaneExtensions.cs" />
     <Compile Include="Framework\ICompatibilityPart.cs" />
+    <Compile Include="Install\LocalizationInstaller.cs" />
     <Compile Include="Install\Installer.cs" />
     <Compile Include="Menus\AdditionnalMenus.cs" />
     <Compile Include="Install\MenusInstaller.cs" />
@@ -106,7 +107,7 @@
     <Compile Include="Framework\Extensions\TypeExtensions.cs" />
     <Compile Include="Mod.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ModInitializer.cs" />
+    <Compile Include="Install\RoadsInstaller.cs" />
     <Compile Include="Framework\Tools.cs" />
     <Compile Include="NewNetwork\Highway6L\Highway6LBuilder.cs" />
     <Compile Include="SomeNetwork\PlanningRoadLargeBuilder.cs" />
