--- a/Core/NetworkExtensions.csproj
+++ b/Core/NetworkExtensions.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Install\Installer.cs" />
     <Compile Include="Menus\AdditionnalMenus.cs" />
     <Compile Include="Install\MenusInstaller.cs" />
+    <Compile Include="Menus\NExtRoadsGroupPanel.cs" />
     <Compile Include="Mod.Path.cs" />
     <Compile Include="Mod.Parts.cs" />
     <Compile Include="Framework\Extensions\ItemClassExtensions.cs" />
@@ -539,6 +540,9 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+      <Project>{7DCC08EF-DC85-47A4-BD6F-79FC52C7EF13}</Project>
+      <Name>Externals</Name>
+    </ProjectReference>
     <ProjectReference Include="..\ObjUnity3D\ObjUnity3D.csproj">
       <Project>{97d70503-6567-41a1-92fc-66d813a53370}</Project>
       <Name>ObjUnity3D</Name>
