--- a/Core/CSL.RoadExtensions.csproj
+++ b/Core/CSL.RoadExtensions.csproj
@@ -107,6 +107,12 @@
     <Content Include="NewNetwork\Alley2L\thumbnails.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="NewNetwork\LargeAvenue6LM\Textures\Ground_Segment__MainTex.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="NewNetwork\LargeAvenue6LM\Textures\Ground_Segment__AlphaMap.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="NewNetwork\OneWay1L\Textures\Ground_NodeLOD__AlphaMap.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
@@ -449,9 +455,7 @@
     <Content Include="SomeNetwork\Textures\planning_road_2_lanes.png" />
     <Content Include="SomeNetwork\thumbnail_atlas.png" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="NewNetwork\LargeAvenue6LM\Textures\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <None Include="NewNetwork\Alley2L\Meshes\Ground.obj">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
@@ -530,13 +534,9 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>rd /s /q  "%2525LOCALAPPDATA%2525\Colossal Order\Cities_Skylines\Addons\Mods\$(ProjectName)"
-mkdir "%2525LOCALAPPDATA%2525\Colossal Order\Cities_Skylines\Addons\Mods\$(ProjectName)"
-xcopy /y /e "$(ProjectDir)bin\$(ConfigurationName)" "%2525LOCALAPPDATA%2525\Colossal Order\Cities_Skylines\Addons\Mods\$(ProjectName)"
-rd /s /q  "%2525LOCALAPPDATA%2525\Colossal Order\Cities_Skylines\Addons\Mods\$(ProjectName)"
-rd /s /q  "C:\Program Files (x86)\Steam\SteamApps\workshop\content\255710\478820060"
-mkdir "C:\Program Files (x86)\Steam\SteamApps\workshop\content\255710\478820060"
-xcopy /y /e "$(ProjectDir)bin\$(ConfigurationName)" "C:\Program Files (x86)\Steam\SteamApps\workshop\content\255710\478820060"</PostBuildEvent>
+    <PostBuildEvent>rd /s /q  "D:\Program Files (x86)\Steam\SteamApps\workshop\content\255710\478820060"
+mkdir "D:\Program Files (x86)\Steam\SteamApps\workshop\content\255710\478820060"
+xcopy /y /e "$(ProjectDir)bin\$(ConfigurationName)" "D:\Program Files (x86)\Steam\SteamApps\workshop\content\255710\478820060"</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
