Added Ground Mesh

--- a/Core/CSL.RoadExtensions.csproj
+++ b/Core/CSL.RoadExtensions.csproj
@@ -493,6 +493,9 @@
     <None Include="NewNetwork\Highway6L\Meshes\Ground_Trans_LOD.obj">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Include="NewNetwork\LargeAvenue6LM\Meshes\Ground.obj">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="NewNetwork\SmallHeavyRoads\Meshes\Ground.obj">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
